Made it more responsive. Fixed a lot of bugs.

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <h6>Pressure Cooker Momo</h6>
                         <p>Pressure cooker momo description here along with more descritpions of this product and other products</p>
                     </div>
-                    <button class="redButton smallerButton">Read More</button>
+                    <button class="redButton smallerButton recItemsBtn">Read More</button>
                 </div>
                 <div class="foodCard">
                     <img src="Assets/menuItems/pressureCookerMomo.png" alt="">
@@ -94,7 +94,7 @@
                         <h6>Pressure Cooker Momo</h6>
                         <p>Pressure cooker momo description here along with more descritpions of this product and other products</p>
                     </div>
-                    <button class="redButton smallerButton">Read More</button>
+                    <button class="redButton smallerButton recItemsBtn">Read More</button>
                 </div>
                 <div class="foodCard">
                     <img src="Assets/menuItems/pressureCookerMomo.png" alt="">
@@ -102,7 +102,7 @@
                         <h6>Pressure Cooker Momo</h6>
                         <p>Pressure cooker momo description here along with more descritpions of this product and other products</p>
                     </div>
-                    <button class="redButton smallerButton">Read More</button>
+                    <button class="redButton smallerButton recItemsBtn">Read More</button>
                 </div>
             </div>
         </section>
@@ -710,10 +710,7 @@
         <section id="reviews" class="reviews">
             <div class="reviewsTop">
                 <h4>Reviews</h4>
-                <div class="reviewButtons">
-                    <i class="fa-solid fa-chevron-left"></i>
-                    <i class="fa-solid fa-chevron-right"></i>
-                </div>
+
             </div>
 
             <div class="reviewsContainer">
@@ -797,15 +794,26 @@
         <section id="gallery" class="gallery"> 
             <h4>Gallery</h4>
             <div class="galleryContainer">
-                <img src="Assets/Images/gallery2.jpg" alt="">
-                <img src="Assets/Images/gallery3.jpg" alt="">
-                <img src="Assets/Images/gallery4.jpg" alt="">
-                <img src="Assets/Images/gallery5.jpg" alt="">
-                <img src="Assets/Images/gallery6.jpg" alt="">
-                <img src="Assets/Images/gallery7.jpg" alt="">
+                <div class="cardsSlider">
+                    <div class="sliderButtons">
+                        <i class="fa-solid fa-arrow-left"></i>
+                        <i class="fa-solid fa-arrow-right"></i>                            
+                    </div>
+                    <div class="sliderContainer">
+                        <img class="sliderContainerImage" src="Assets/Images/gallery2.jpg" alt="">
+                        <img class="sliderContainerImage" src="Assets/Images/gallery3.jpg" alt="">
+                        <img class="sliderContainerImage" src="Assets/Images/gallery4.jpg" alt="">
+                        <img class="sliderContainerImage" src="Assets/Images/gallery5.jpg" alt="">
+                        <img class="sliderContainerImage" src="Assets/Images/gallery6.jpg" alt="">
+                        <img class="sliderContainerImage" src="Assets/Images/gallery7.jpg" alt="">
+                    </div>
+                </div>
             </div>
 
         </section>
+
+
+
 
 
         <section id="contact-us" class="contactUs">
